# lendurai

./: .gitignore  README.md
cv/: CMakeLists.txt  gemini_main.cpp  main.cpp
cv/old/: main.cpp  main1.cpp  main2.cpp
nn/: README.md  inference.py  requirements.txt  train.py
nn/data/: __init__.py  dataset.py
nn/losses/: __init__.py  infonce.py
nn/models/: __init__.py  encoder.py
scripts/: sweep.sh
